<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dress It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nameLabel">Name</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordConfLabel">Password Confirmation</string>
    <string name="createLabel">Create</string>
    <string name="numberDefaultText">Key in your mobile phone</string>
    <string name="firstNameDefaultText">Key in your first name</string>
    <string name="lastNameDefaultText">Key in your last name</string>
    <string name="pseudoDefaultText">Key in your pseudo</string>
    <string name="emailDefaultText">Key in your mail</string>
    <string name="passwordDefaultText">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="logOffButtonText">Log Off</string>
    <string name="welcomeText">Welcome</string>
    <string name="action_update">Update</string>
    <string name="sexeLabel">Gender</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="hello">Hello World, ImageExplorerActivity!</string>
    <string-array name="sexe">
        <item >Male</item>
        <item >Female</item>
    </string-array>

</resources>
