<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	<TextView
	    android:id="@+id/welcomeHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText" />

    
    <Button
        android:id="@+id/registerLead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeHead"
        android:text="@string/registerButtonText"
        />
    
    <Button
        android:id="@+id/LoginLead"
        android:layout_toRightOf="@id/registerLead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        />
    
    <Button
        android:id="@+id/LogOff"
        android:layout_toRightOf="@id/LoginLead"
        android:layout_width="wrap_content"
        android:layout_below="@id/welcomeHead"
        android:layout_height="wrap_content"
        android:text="@string/logOffButtonText"
        />
    <Button
        android:id="@+id/Profile"
        android:layout_toRightOf="@id/LogOff"
        android:layout_width="wrap_content"
        android:layout_below="@id/welcomeHead"
        android:layout_height="wrap_content"
        android:text="profile"
        />

</RelativeLayout>
